--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "abitopic",
-  "version": "0.1.0",
+  "name": "abistorage-view",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@babel/core": "7.2.2",
@@ -57,7 +57,7 @@
     "terser-webpack-plugin": "1.2.2",
     "typescript": "3.2.4",
     "url-loader": "1.1.2",
-    "web3": "^1.3.0",
+    "web3": "^1.3.2",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
@@ -73,15 +73,27 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.3%",
+      "not dead",
+      "not op_mini all",
+      "not IE > 0",
+      "not samsung 4",
+      "not and_uc 12.12",
+      "chrome >= 89",
+      "edge 91",
+      "firefox >= 88"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 edge version"
+    ]
+  },
   "devDependencies": {
     "monaco-editor-webpack-plugin": "^1.7.0",
-    "prettier": "^1.18.2",
+    "prettier": "^2.3.2",
     "raw-loader": "^3.1.0"
   },
   "jest": {
@@ -124,10 +136,7 @@
       "jsx",
       "node"
     ],
-    "watchPlugins": [
-      "/Users/imazzara/Projects/abitopic/node_modules/jest-watch-typeahead/filename.js",
-      "/Users/imazzara/Projects/abitopic/node_modules/jest-watch-typeahead/testname.js"
-    ]
+    "watchPlugins": []
   },
   "babel": {
     "presets": [
