--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
-    "monaco-editor": "^0.18.1",
+    "monaco-editor": "0.18.1",
     "now": "^16.2.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -58,7 +58,7 @@
     "typescript": "3.2.4",
     "url-loader": "1.1.2",
     "web3": "^1.3.2",
-    "webpack": "4.28.3",
+    "webpack": "4.46.0",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "websocket": "^1.0.28",
@@ -92,7 +92,7 @@
     ]
   },
   "devDependencies": {
-    "monaco-editor-webpack-plugin": "^1.7.0",
+    "monaco-editor-webpack-plugin": "1.7.0",
     "prettier": "^2.3.2",
     "raw-loader": "^3.1.0"
   },
